[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"

solana-sdk = "=1.16.15"
solana-program-runtime = "=1.16.15"
solana-vote-program = "=1.16.15"
solana-perf = "=1.16.15"

[build-dependencies]
tonic-build = "0.10"
